# LIME

./: .gitignore  CMakeLists.txt  LIME_TODO.md  launch_hunyuan.sh
cmake/: CompileShaders.cmake
engine/: Camera.cpp  Input.cpp  Mesh.cpp  Window.cpp
engine/Animation/: AnimationPlayer.cpp
engine/Editor/: GLBLoader.cpp  GLBLoader.hpp  GLBLoader_Skinned.cpp  LimeLoader.cpp  LimeLoader.hpp  SceneObject.cpp  SceneObject.hpp  SkinnedGLBLoader.cpp  SkinnedGLBLoader.hpp
engine/Entity/: Action.cpp  ActionSystem.cpp  Entity.cpp
engine/Renderer/: Buffer.cpp  Buffer.hpp  ImGuiManager.cpp  ImGuiManager.hpp  ModelRenderer.cpp  ModelRenderer.hpp  Pipeline.cpp  Pipeline.hpp  PipelineBuilder.cpp  PipelineBuilder.hpp  SkinnedModelRenderer.cpp  SkinnedModelRenderer.hpp  Swapchain.cpp  Swapchain.hpp  TextureManager.cpp  TextureManager.hpp  VulkanApplicationBase.cpp  VulkanApplicationBase.hpp  VulkanContext.cpp  VulkanContext.hpp
engine/include/eden/: Action.hpp  ActionSystem.hpp  Animation.hpp  Camera.hpp  Entity.hpp  Input.hpp  Mesh.hpp  Scene.hpp  Transform.hpp  Window.hpp
shaders/: brush_ring.vert  default.vert  gizmo.vert  model.frag  model.vert  selection.frag  selection.vert  skinned_model.frag  skinned_model.vert  wireframe.frag  wireframe.vert
src/: AnimationMode.cpp  AnimationMode.hpp  EditableMesh.cpp  EditableMesh.hpp  EditorContext.hpp  Hunyuan3DClient.hpp  IEditorMode.hpp  MCPServer.cpp  MCPServer.hpp  ModelingMode.cpp  ModelingMode.hpp  ModelingMode_AutoRetopo.cpp  ModelingMode_Gizmo.cpp  ModelingMode_Paint.cpp  ModelingMode_PathTube.cpp  ModelingMode_Ports.cpp  ModelingMode_Primitives.cpp  ModelingMode_Retopo.cpp  ModelingMode_Rigging.cpp  ModelingMode_Slice.cpp  ModelingMode_Snap.cpp  ModelingMode_Timeline.cpp  ModelingMode_UV.cpp  PaintBrushRing.cpp  PaintBrushRing.hpp  main.cpp
